--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    Hello from index . html 
+  from index
+  need to see if he have account or not if not should add one 
+
+  <script type="text/javascript" src="../js/PagesScripts/index.js"></script>
 </body>
 
-<script src="../src/htmljs.js" type="text/javascript"></script>
 </html>
