--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="login-container">
+    <div class="loginCountianer-box">
         <h1>Login</h1>
         <form class="login-form">
             <label>Email</label>
